# maimomo-mcp

./: README.md  pyproject.toml
maimemo_mcp/: __main__.py  client.py  server.py
