[project]
name = "maimemo-mcp"
version = "0.1.0"
description = "MCP Server for 墨墨背单词 Open API"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27.0",
    "httpx>=0.28.0",
]

[project.scripts]
maimemo-mcp = "maimemo_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["maimemo_mcp"]
